--- a/cypress/fixtures/BikeTestOverview.html
+++ b/cypress/fixtures/BikeTestOverview.html
@@ -23,6 +23,11 @@
 <noscript>
 <iframe height='0' src='//www.googletagmanager.com/ns.html?id=GTM-TP845S' style='display:none;visibility:hidden' width='0'></iframe>
 </noscript>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script>
+  var currentAthlete = {}
+  currentAthlete.attributes = JSON.parse(`{"id":33490643,"logged_in":true,"display_name":"Jelle Buitenhuis","first_name":"Jelle","last_name":"Buitenhuis","premium":false,"has_power_analysis_access":false,"photo_large":"https://dgalywyr863hv.cloudfront.net/pictures/athletes/33490643/9954746/4/large.jpg","photo":"https://dgalywyr863hv.cloudfront.net/pictures/athletes/33490643/9954746/4/large.jpg","badge":null,"measurement_preference":"meters","weight_measurement_unit":"kg","type":1,"member_type":"","display_location":"Netherlands","gender":"M","geo":{"city":"","state":"","country":"Netherlands","lat_lng":[52.132633,5.2912659999999505]},"has_leaderboards_access":false,"has_pace_zone_analysis_access":false,"is_segments_restricted":true}`)
+</script>
 <script>
   var currentAthlete = {}
   currentAthlete.attributes = JSON.parse(`{"id":33490643,"logged_in":true,"display_name":"Jelle Buitenhuis","first_name":"Jelle","last_name":"Buitenhuis","premium":false,"has_power_analysis_access":false,"photo_large":"https://dgalywyr863hv.cloudfront.net/pictures/athletes/33490643/9954746/4/large.jpg","photo":"https://dgalywyr863hv.cloudfront.net/pictures/athletes/33490643/9954746/4/large.jpg","badge":null,"measurement_preference":"meters","weight_measurement_unit":"kg","type":1,"member_type":"","display_location":"Netherlands","gender":"M","geo":{"city":"","state":"","country":"Netherlands","lat_lng":[52.132633,5.2912659999999505]},"has_leaderboards_access":false,"has_pace_zone_analysis_access":false,"is_segments_restricted":true}`)
